AngryPigs/css/editor-styles.css
body{
    display: grid;
    grid-template-areas: 'left right right ';
    grid-gap: 0px;
}

/*
 ******************************************
 *     THIS ARE THE LEFT PANEL STYLES     *
 ******************************************
 */

#left-panel{

    grid-area: left;
    min-width: 22rem;

}

#logo{
    background-image: url('../images/logo.png');
    background-size: 100% 100%;

    width: 100%;
    height: 20%;
}

#user-info{
    margin-top: 6%;
    margin-left: 6%;
}

#user-info > span{
    margin-right: 3%;
}

#user-info > .button{
    background: #fff;
    color: #aaa;
    padding-left: 3%;
    padding-right: 3%;
    padding-bottom: 1%;
}

/*levels styles*/

#levels{
    margin-top: 4%;
    margin-left: 6%;
    width: 90%;
    height: 60%;
}

#level-list{

    height: 90%;
    width: 100%;
    background: #fff;

    margin-top: 2%;

    direction: rtl;
    overflow:auto;
}

.level-list-item{
    width: 97%;

    padding-left: 2%;
    padding-right: 1%;
    direction:ltr;
}

.level-list-item.selected{

    background: #ddd;
    font-weight: bold;
}

.level-list-item:hover{

    background: #ddd;
    cursor: pointer;
}

.level-list-item:hover > i{
    display: inline;
}

.level-list-item > i{
    display: none;
    float: right;
}

.level-list-item > i:hover{

    color: #d80026;
}

#level-buttons{
    text-align: right;
}

#level-buttons > .button{
    background: #fff;
    padding: 2%;
}

/*
 *******************************************
 *     THIS ARE THE EDITOR PANEL STYLES    *
 *******************************************
 */

 #right{

    grid-area: right;
    overflow-x: auto;
    text-align: center;
 }

 #editor {

    position:relative;
    display: inline-block;

    width: 1280px;
    height: 720px;

    margin-top: 2%;

    background-image: url('../images/backgrounds/default-level.png');
    background-size: 100% 100%;

}

#catapult{

    background-image: url('../images/cannon.png');
    background-size: 100% 100%;

    width: 150px;
    height: 150px;
}

.draggable{

    position: absolute;
    transform: translate(-50%, -50%);

}

.draggable:hover{
    cursor: grab;
}

/*
 *******************************************
 *     THIS ARE THE INFO PANEL STYLES    *
 *******************************************
 */

#right-panel{

    position: absolute;
    display: none;
    top: 0;
    right: 2%;
    min-width: 20%;

}

.panel{

    background: #fff;  
    border-style: solid;
    border-width: thin;
    border-color: #ddd;

    margin-bottom: 2%;
    width: 100%;
}

.panel-tittle{
    width: 96%;
    padding-left: 2%;
    padding-right: 2%;

    color: #fff;
    background: #10AEE8; 

    border-bottom-style: solid;
    border-bottom-color: #ddd;
}


.panel-tittle > i{
    float: right;

}


#info-panel > form{
    padding: 2%;
    width: 96%;
}

.form-item{
    display: inline-block;
    margin-bottom: 2%;
}

label.form-item{
    min-width: 20%;
}

.form-item.stars{
    min-width: 0;
}

#star1, #star2, #star3{

    font-size: 0.8em;
    width: 20%;
}

form div{
    text-align: center;
    width: 100%;

}
.info-button{

    background: #d80026;
    color: #fff;
    font-family: 'Arvo', Georgia, Times, serif;
    font-size: 0.8em;

    min-width: 30%;
    padding: 2%;
    margin: 2%;
    display: inline-block;
    border-radius: 25px;
}

#save-button{
    display: none;
}

#object-visualization > img{

    margin: 5%;
}

/*
 ******************************************
 *        THIS ARE THE MODAL STYLES       *
 ******************************************
 */
 #modal-wrapper{
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.3);
    z-index: 99999;

    height: 100%;
    width: 100%;

}

#modal{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    
    padding: 2%;
    padding-left: 5%;
    padding-right: 5%;

    background: #10AEE8	;
    background: -webkit-linear-gradient( top, #10AEE8, #66CBF0);
    background: -o-linear-gradient(bottom , #10AEE8, #66CBF0); 
    background: -moz-linear-gradient(bottom ,#10AEE8, #66CBF0); 
    background: linear-gradient(to bottom , #10AEE8, #66CBF0); 

    border-style: solid;
    border-color: #000;
    border-radius: 2%;

    text-align: center;
    color: #fff;
}

#modal-tittle{
    font-size: 1.5em;
    margin-bottom: 2%;
}

.modal-button{

    margin-top: 5%;
    background: #d80026;
    color: #fff;

    padding:2%;
    padding-left: 7%;
    padding-right: 7%;
    border-radius: 25px;

}

.modal-button:hover{
    border-style: solid;
    border-color: #000;
    border-width: thin;
}

#modal-input{

    border-radius: 20px;
    border-style: none;

    font-size: 1.2em;
    padding-left: 2%;
    margin-bottom: 5%;

}

#input-modal > div > .button{

    margin-right: 3%;
    margin-left: 3%;
    font-size: 1.2em;
}

#confirmation-modal{
    display: none;
}


#objets-modal > form{
    text-align: justify;
}

#objets-modal > #object-visualization{
    width: 12vw;
    height: 12vw;
    display: inline-block;

    background: #fff;
    margin: 2%;
}


/*
 *******************************************
 * THIS IS THE STYLES THAT WORK EVERYWHERE *
 *******************************************
 */

.panel{
    display: inline-block;
}

.button:hover{
    cursor: pointer;
    font-weight: bold;
}

.tittle{
 
    font-family: 'Arvo', Georgia, Times, serif;
    font-weight: bold;
    color: #fff;
    font-size: 1.2em;
    letter-spacing: 0.1em;
    text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;   
}

